cmake_minimum_required(VERSION 3.28)
project(Project)

set(CMAKE_CXX_STANDARD 20)

add_executable(code main.cpp
        ljyall.h
        intelligent.h
        Fraction.h
        Complex.h
        Modint.h
        int2048.h
        Polynomial.h
        float2048.h
        python.h
        parser.h
)
